# OpenGL_2021_project

./: CMakeLists.txt  README.md  vcpkg.json
framework/core/: CMakeLists.txt
framework/core/geometries/: capsule.inl  cube.inl  cylinder.inl  sphere.inl  teapot.inl  teapot_patch.inl  torus.inl
framework/core/include/: camera.hpp  color.hpp  iapplication.hpp  manager.hpp  template.hpp  utils.hpp
framework/core/include/geometry/: capsule.hpp  cube.hpp  cylinder.hpp  geometry.hpp  geometry_base.hpp  sphere.hpp  teapot.hpp  torus.hpp
framework/core/include/opengl/: opengl_object.hpp  program.hpp  shader.hpp  texture.hpp  ubo.hpp
framework/core/include/scene/: model_ubo.hpp  scene_object.hpp
framework/core/include/utils/: configuration.hpp
framework/core/shaders/: display_texture.frag  display_texture_330.frag  full_screen_quad.vert  gbuffer.frag  lit.frag  lit.vert  phong.glsl  unlit.frag  unlit.vert  unlit_330.vert
framework/core/src/: camera.cpp  color.cpp  iapplication.cpp  manager.cpp  utils.cpp
framework/core/src/geometry/: geometry.cpp
framework/core/src/opengl/: program.cpp  shader.cpp
framework/pv112/: CMakeLists.txt
framework/pv112/include/: pv112_application.hpp  utilities.hpp
framework/pv112/src/: pv112_application.cpp  utilities.cpp
pv112_seminars/: CMakeLists.txt
pv112_seminars/template/: CMakeLists.txt  application.cpp  application.hpp  data.hpp  main.cpp
pv112_seminars/template/shaders/: draw_light.frag  draw_light.vert  fog.frag  fog.vert  main.frag  main.vert  mirror.frag  mirror.vert  postprocess.frag  reflect.frag  reflect.vert  skybox.frag  skybox.vert  textured.frag  textured.vert
